--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content"
             android:id = "@+id/editText"
-            android:hint = "Enter Name"
+            android:hint = "Name"
             android:focusable = "true"
             android:textColorHint = "#ff0000"
             android:layout_marginTop = "46dp"
